--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.26.0"
   }
 }
